Basic authentication and authorization implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.security.user.name=Nishath
-spring.security.user.password=pw
+#spring.security.user.name=Nishath
+#spring.security.user.password=pw
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_sec
